2016-07-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (proctitle_init): Init __progname and _progname_full because
	something in this function is nuking them, and they're used by the syslog
	functions.

2016-07-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_authenticate): Check username and password before
	printing them.

2016-07-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_free, nvti_from_keyfile, nvti_to_keyfile): Adjust
	for summary element removal.
	(nvti_summary, nvti_set_summary): Remove functions.

	* base/nvti.h: Remove functions headers.
	(struct nvti): Remove summary element.

	* nasl/nasl_scanner_glue.c (script_summary): Don't set summary.

2016-07-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (nasl_prf_sha256): Fix error message.

2016-07-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* base/gpgme_util.c (determine_gpghome, openvas_init_gpgme_ctx): Add
	subdir arg.

	* base/gpgme_util.h: Adjust header accordingly.

2016-07-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_cert.c (nasl_cert_query): Add modulus and exponent commands.

	* nasl/nasl_crypto2.c (nasl_rsa_get_modulus, nasl_rsa_get_exponent):
	Remove functions.

	* nasl/nasl_crypto2.h: Remove function headers.

	* nasl/nasl_init.c (libfuncs): Remove rsa_get_modulus() and
	rsa_get_exponent().

2016-06-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (prf_sha256): Use correct buffer length.

2016-06-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (prf_sha256): Fix memory leak.

2016-06-28  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_crypto.c (hmac_sha256): Constify parameters.
	(prf_sha256, nasl_prf_sha256): New functions

	* nasl/nasl_crypto.h: Add new function prototype.

	* nasl/nasl_init.c (libfuncs): Add prf_sha256() function.

2016-06-28  Hani Benhabiles <hani.benhabiles@greenbone.net>
