@@ -57,7 +57,7 @@ proctitle_init (int argc, char **argv)
 
   /* Move environ to new memory, to be able to reuse older one. */
   while (envp[i]) i++;
-  environ = g_malloc0 (sizeof(char *) * (i + 1));
+  environ = g_malloc0 (sizeof (char *) * (i + 1));
   if (current_environ)
     g_free (current_environ);
   current_environ = environ;
@@ -67,9 +67,9 @@ proctitle_init (int argc, char **argv)
 
   old_argv = argv;
   if (i > 0)
-    argv_len = envp[i-1] + strlen(envp[i-1]) - old_argv[0];
+    argv_len = envp[i-1] + strlen (envp[i-1]) - old_argv[0];
   else
-    argv_len = old_argv[argc-1] + strlen(old_argv[argc-1]) - old_argv[0];
+    argv_len = old_argv[argc-1] + strlen (old_argv[argc-1]) - old_argv[0];
 
   /* Seems like these are in the moved environment, so reset them.  Idea from
    * proctitle.cpp in KDE libs.  */
